<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/plan_item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/species_item"
    android:layout_marginBottom="2dp"
    android:orientation="vertical"
   >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="97dp"
        >

        <LinearLayout
            android:id="@+id/plan_contents"
            android:layout_width="270dp"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/plan_time"
                android:layout_width="wrap_content"
                android:layout_height="33dp"

                android:layout_marginLeft="20dp"
                android:layout_marginTop="15dp"
                android:text="TextView"
                android:textColor="@color/white"
                android:textSize="24dp" />

            <TextView
                android:id="@+id/plan_content"
                android:layout_width="wrap_content"
                android:layout_height="38dp"
                android:layout_marginLeft="22dp"
                android:gravity="center_vertical"
                android:text="TextView"
                android:textColor="@color/white"
                android:textSize="18dp" />
        </LinearLayout>

        <Switch
            android:id="@+id/state_switch"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:gravity="center" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/expanded_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:text="Szczegóły:"
            android:textColor="@color/white"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/editTextTextMultiLine"
            android:layout_width="match_parent"

            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:ems="10"
            android:gravity="start|top"
            android:inputType="textMultiLine" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/item_map_btn"
                android:layout_width="match_parent"
                android:layout_height="76dp"

                android:layout_marginLeft="10dp"
                android:layout_marginTop="2dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:background="@drawable/btn_main_page"
                android:text="Zaznacz na mapie"
                android:textSize="17dp" />

            <Button
                android:id="@+id/del_item_btn"
                android:layout_width="match_parent"
                android:layout_height="76dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="2dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:background="@drawable/btn_main_page"
                android:text="Usuń"
                android:textSize="17dp" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>