<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/page_1"
        android:enabled="true"
        android:icon="@drawable/record_icon"

        android:tooltipText="Zarejestruj swoją obserwację!"
        android:title="Obserwuj"/>
    <item
        android:id="@+id/page_2"
        android:enabled="true"
        android:icon="@drawable/observations_icon"
        android:tooltipText="Dotychczasowa kronika obserwacji"
        android:title="Galeria"/>
    <item
        android:id="@+id/page_3"
        android:enabled="true"
        android:icon="@drawable/plans_icon"

        android:tooltipText="Planowanie obserwacji"
        android:title="Planuj"/>
    <item
        android:id="@+id/page_4"
        android:enabled="true"
        android:icon="@drawable/map_icon"

        android:tooltipText="Lokalizacje obserwacji"
        android:title="Mapa"/>
    <item
        android:id="@+id/page_5"
        android:enabled="true"
        android:icon="@drawable/stat_icon"

        android:tooltipText="Statystyki obserwacji"
        android:title="Statystyki"/>
</menu>