...
        android:layout_above="@+id/button5"
        android:layout_alignParentStart="true"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="43dp"
        android:background="@drawable/btn_main_page"
        android:onClick="saveLocation"
        android:text="Zapisz"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <fragment
        android:id="@+id/map"

...
